<resources>

    <string name="app_name">便签墙</string>
    <string name="menu_settings">Settings</string>
    <string name="now_memo">当前便签</string>
    <string name="history_memo">历史便签</string>
    <string name="search_memo">发送便签</string>
    <string name="public_memo">公共便签</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading">Loading</string>
    <string name="title_activity_new_memo">NewMemoActivity</string>
    <string name="new_memo">添加便签</string>
    <string name="new_date">日期：</string>
    <string name="new_time">时间：</string>
    <string name="new_alarmclock">闹钟提醒：</string>
    <string name="new_issend">发送给朋友：</string>
        <string name="new_issendcommon">发送到公共便签墙：</string>
    <string name="commit">提  交</string>
    <string name="ok">确  定</string>
    <string name="new_edit_hint">请输入便签内容。</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="calendar_title">请选择日期</string>
    <string name="calendar_week1">周一</string>
    <string name="calendar_week2">周二</string>
    <string name="calendar_week3">周三</string>
    <string name="calendar_week4">周四</string>
    <string name="calendar_week5">周五</string>
    <string name="calendar_week6">周六</string>
    <string name="calendar_week7">周日</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_big_memo">BigMemoActivity</string>
    <string name="title_activity_loading_gif">LoadingGifActivity</string>
    <string name="title_activity_setting">系统设置</string>
    <string name="font_setting">字体大小：</string>
    <string name="fontbg_setting">字体背景：</string>
    <string name="onus_setting">关于我们</string>
    <string name="login_setting">一键登录</string>
    <string name="updater_setting">版本更新</string>
    <string name="login_phone">手机号码：</string>
    <string name="login_yzm">获取验证码</string>
    <string name="login_login">登  录</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_my_send_memo">发送便签</string>
    <string name="title_activity_about_us">关于我们</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_common_memo">公共便签</string>

</resources>