<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CalendarActivityID"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/lay_title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#66cad4" >

        <ImageView
            android:id="@+id/left_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/calendar_title"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/defselector"
            android:gravity="center"
            android:text="确定"
            android:textColor="#fff"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="#77000000"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/btn_prev_month"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/left_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/triangle06_states"
                android:duplicateParentState="true"
                android:text=""
                android:textSize="16.0dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="xxxx年14月"
                android:textColor="#ffffffff"
                android:textSize="21.0dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_next_month"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/right_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/triangle05_states"
                android:duplicateParentState="true"
                android:text=""
                android:textSize="16.0dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="22.0dip"
        android:background="#ff8091a8" >

        <TextView
            style="@style/weekName"
            android:text="@string/calendar_week7" />

        <TextView
            style="@style/weekName"
            android:text="@string/calendar_week1" />

        <TextView
            style="@style/weekName"
            android:text="@string/calendar_week2" />

        <TextView
            style="@style/weekName"
            android:text="@string/calendar_week3" />

        <TextView
            style="@style/weekName"
            android:text="@string/calendar_week4" />

        <TextView
            style="@style/weekName"
            android:text="@string/calendar_week5" />

        <TextView
            style="@style/weekName"
            android:text="@string/calendar_week6" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:clickable="true"
        android:clipChildren="true"
        android:columnWidth="55.0dip"
        android:horizontalSpacing="1.0dip"
        android:listSelector="@null"
        android:numColumns="7"
        android:paddingBottom="1.0dip"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1.0dip" />

</LinearLayout>