<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_down_bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nowmemoid"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/now_memo"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#d2d2d2" />

            <TextView
                android:id="@+id/hietorymemoid"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/history_memo"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#d2d2d2" />

            <TextView
                android:id="@+id/searchememoid"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/search_memo"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="#d2d2d2" />

            <TextView
                android:id="@+id/publicmemoid"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/public_memo"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>